--- a/Algorithm/CMakeLists.txt
+++ b/Algorithm/CMakeLists.txt
@@ -1,4 +1,5 @@
-add_library( algorithm MyAdd.hpp )
+add_library( algorithm MyAdd.hpp MyMultiply.hpp )
 set_target_properties( algorithm PROPERTIES LINKER_LANGUAGE CXX )
 
 add_gtest( MyAddTest tests/MyAddTest.cpp LINK algorithm )
+add_gtest( MyMultiplTest tests/MyMultiplyTest.cpp LINK algorithm )
